--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 
     <div class="aviso"></div>
 
+    <footer>Desenvolvido Luan Campos durante o desafio 7 Projetos em 7 dias da B7Web</footer>
+
     <script src="script.js"></script>
 </body>
 </html>
